# steam-profile

./: .gitignore
api/: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: "2025_01_29_09580176e3ac_profile_model".py  "2025_01_30_1ba74e7650ce_user_model".py  "2025_01_30_90056772b91b_profile_model_template_username_column".py  "2025_01_30_a56d95afb99d_profile_model_some_columns".py  "2025_01_30_fdcee33aff7d_profile_model_slug_column".py  "2025_02_02_496659b6047f_profile_steam_is_steam_authenticated_".py  "2025_02_02_c3184b9cb053_profile_steam_link_column".py  "2025_02_28_f77ae239df70_profile_model_added_invite_link_path_".py  "2025_03_02_8e1bd8293a2b_trade_model".py
api/html_templates/: txqmjgkxhzp5.html
api/nginx/templates/: app.conf.template
api/scripts/: run.sh
api/src/: main.py
api/src/auth/: router.py
api/src/core/: caching.py  config.py  dependencies.py  helpers.py
api/src/core/db/: dependencies.py  mixins.py  service.py  session.py  unitofwork.py
api/src/exceptions/: base.py  steam_parse.py
api/src/profile/: enums.py  models.py  router.py  schemas.py  service.py
api/src/repositories/: generic.py  profile.py  trade.py  user.py
api/src/trade/: models.py  router.py  schemas.py  service.py
api/src/user/: models.py  router.py  schemas.py  service.py
api/src/utils/: text.py
api/static/: ndmkkcq6vc09.js  openWind.js  txqmjgkxhzp5.html  vljvylnrdlf0.js
api/supervisor/: supervisord.conf
api/templates/: index.html
front/: README.md  (+1 more)
(+47 files in other folders)
